--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/* ===========================================
+   MAIN STYLESHEET - Imports all modules
+   =========================================== */
 
-body {
-    -webkit-font-smoothing: antialiased;
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
+@import './styles/base.css';
+@import './styles/layout.css';
+@import './styles/cards.css';
