--- a/src/styles/upcoming.css
+++ b/src/styles/upcoming.css
@@ -72,10 +72,13 @@
     font-weight: 700;
     color: #fff;
     text-align: center;
-    /* Allow text wrapping */
     white-space: normal;
-    line-height: 1.2;
+    line-height: 1.3;
     margin-top: 4px;
+    min-height: 42px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .upcoming-detail .upcoming-vs {
